Fixed Volume Slider. Add funtionlaity to the window resize menuitem. Add functionality to te file search menuitem.

--- a/src/css/mainTheme.css
+++ b/src/css/mainTheme.css
@@ -39,7 +39,15 @@ VBox{
 	-fx-background-color:  	#282828;
 }
 
+.slider .track{
+    -fx-control-inner-background: #ea5353!important;
+    -fx-padding: 3.5; 
+    -fx-background-insets: 0 0 0 ,0,0;
+}
 
+.slider .thumb {
+	-fx-background-color: white!important;
+}
 
 
 
